2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/lastfm-ws.[ch]
	* src/scrobbler.c
	* src/uimisc.c:
	Make LastfmWsSession a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	* src/lastfm-ws.c
	* src/scrobbler.c
	* src/userconfig.c
	* src/vgl-server.[ch]:
	Make VglServer a VglObject

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/Makefile.am
	* src/vgl-object.[ch]:
	VglObject, a very minimalistic implementation of ref-counted
	objects.

2009-09-05  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-server.c:
	Define VglServerData struct for storing built-in server
	information.

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c
	(controller_open_usercfg)
	* src/uimisc.c
	(ui_usercfg_window, usercfg_add_account_settings)
	(+usercfg_create_server_combobox):
	Add a combo box to the settings dialog to select the server

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-server.[ch]
	(vgl_server_new, vgl_server_unref)
	(vgl_server_list_add, vgl_server_list_init):
	Add a variable to VglServer to indicate which servers need to use
	the legacy Last.fm streaming API.

	* src/protocol.[ch] (lastfm_session_new):
	Make the handshake URL configurable.

	* src/lastfm-ws.c
	(lastfm_ws_get_session, lastfm_ws_radio_tune)
	(lastfm_ws_radio_get_playlist):
	Use the legacy streaming API for servers that request it.

	* src/audio.c (lastfm_audio_play):
	Make Jamendo stream its music in mp3, since it's the only format
	that Vagalume currently supports.

2009-09-04  Alberto Garcia  <agarcia@igalia.com>

	Initial support for different Last.fm-compatible servers.

	* src/Makefile.am
	* src/vgl-server.[ch]:
	New class to store server information.

	* src/userconfig.[ch]
	(vgl_user_cfg_read, vgl_user_cfg_write)
	(vgl_user_cfg_new, vgl_user_cfg_destroy)
	(+vgl_user_cfg_set_server, +vgl_user_cfg_set_server_name):
	Store current server in the VglUserCfg object.

	* src/controller.c