@@ -1217,7 +1217,7 @@ tagwin_destroy                          (tagwin *w)
 {
         g_return_if_fail(w != NULL);
         gtk_widget_destroy(GTK_WIDGET(w->window));
-        lastfm_track_unref(w->track);
+        vgl_object_unref(w->track);
         vgl_object_unref(w->ws_session);
         g_free(w->user);
         g_free(w->tags_artist);
@@ -1533,7 +1533,7 @@ tagwin_run                              (GtkWindow             *parent,
         gtk_table_attach_defaults(table, alig, 1, 2, 3, 4);
 
         t = tagwin_create();
-        t->track = lastfm_track_ref(track);
+        t->track = vgl_object_ref(track);
         t->ws_session = vgl_object_ref(ws_session);
         t->window = GTK_WINDOW(dialog);
         t->entry = GTK_ENTRY(entry);
