@@ -1,6 +1,17 @@
 2009-09-05  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/controller.c
+	* src/imstatus.c
+	* src/playlist.[ch]
+	* src/protocol.c
+	* src/scrobbler.c
+	* src/uimisc.c
+	* src/vgl-tray-icon.c:
+	Make LastfmTrack a VglObject
+
+2009-09-05  Alberto Garcia  <agarcia@igalia.com>
+
+	* src/controller.c
 	* src/lastfm-ws.[ch]
 	* src/scrobbler.c
 	* src/uimisc.c:
